platform/kyverno-policies/block-latest-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-latest-image
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: block-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using image tag latest is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
